<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorSurface"
    tools:context=".ui.fragments.SettingsFragment"
    tools:ignore="HardcodedText">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:layout_gravity="center"
        android:background="@drawable/background_rounded"
        android:backgroundTint="?attr/colorSecondaryContainer"
        android:paddingVertical="10dp"
        android:orientation="vertical"
        tools:ignore="UselessParent">

        <LinearLayout
            android:id="@+id/languageSettingsContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:orientation="vertical">

            <com.oussama.portfolio.ui.components.textshufflerview.TextShufflerView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/jet_brains_mono_bold"
                android:text="@string/languageSettings"
                android:textColor="?attr/colorOnSecondaryContainer"
                app:autoAnimate="true" />

            <RadioGroup
                android:id="@+id/languageRadioGrp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="5dp"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/enRadio"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="English"
                    android:textColor="?attr/colorOnSecondaryContainer" />

                <RadioButton
                    android:id="@+id/frRadio"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Français"
                    android:textColor="?attr/colorOnSecondaryContainer" />
            </RadioGroup>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/themeSettingsContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:orientation="vertical">

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginHorizontal="20dp"
                android:layout_marginVertical="10dp"
                android:background="@drawable/background_rounded"
                android:backgroundTint="?attr/colorSecondary" />

            <com.oussama.portfolio.ui.components.textshufflerview.TextShufflerView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/jet_brains_mono_bold"
                android:text="@string/themeSettings"
                android:textColor="?attr/colorOnSecondaryContainer"
                app:autoAnimate="true" />

            <RadioGroup
                android:id="@+id/themeRadioGrp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="5dp"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/autoRadio"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Auto"
                    android:textColor="?attr/colorOnSecondaryContainer" />

                <RadioButton
                    android:id="@+id/lightRadio"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Light"
                    android:textColor="?attr/colorOnSecondaryContainer" />

                <RadioButton
                    android:id="@+id/nightRadio"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Night"
                    android:textColor="?attr/colorOnSecondaryContainer" />
            </RadioGroup>
        </LinearLayout>


        <LinearLayout
            android:id="@+id/colorSchemeSettingsContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:orientation="vertical">

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginHorizontal="20dp"
                android:layout_marginVertical="10dp"
                android:background="@drawable/background_rounded"
                android:backgroundTint="?attr/colorSecondary" />

            <com.oussama.portfolio.ui.components.textshufflerview.TextShufflerView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/jet_brains_mono_bold"
                android:text="@string/colorSchemeSettings"
                android:textColor="?attr/colorOnSecondaryContainer"
                app:autoAnimate="true" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="vertical">

                    <com.oussama.portfolio.ui.components.PieView
                        android:id="@+id/systemDynamicColorsPie"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_marginHorizontal="10dp"
                        app:pieColorPrimary="?attr/colorPrimary"
                        app:pieColorSecondary="?attr/colorSecondary"
                        app:pieColorTertiary="?attr/colorTertiary"
                        app:pieBorderColor="@color/white"/>

                    <com.oussama.portfolio.ui.components.textshufflerview.TextShufflerView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/colorSchemeSystemSettings"
                        android:textSize="14sp"
                        android:textColor="?attr/colorOnSecondaryContainer"
                        app:autoAnimate="true" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:layout_marginStart="15dp"
                    android:orientation="vertical">

                    <com.oussama.portfolio.ui.components.PieView
                        android:id="@+id/randomColorsPie"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_marginHorizontal="10dp"
                        app:pieColorPrimary="?attr/colorPrimary"
                        app:pieColorSecondary="?attr/colorSecondary"
                        app:pieColorTertiary="?attr/colorTertiary"
                        app:pieBorderColor="@color/white"/>

                    <com.oussama.portfolio.ui.components.textshufflerview.TextShufflerView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/colorSchemeRandomSettings"
                        android:textSize="14sp"
                        android:textColor="?attr/colorOnSecondaryContainer"
                        app:autoAnimate="true" />
                </LinearLayout>

            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</FrameLayout>